--- a/public/css/apps.css
+++ b/public/css/apps.css
@@ -32,6 +32,12 @@ body {
 .weui-tabbar{position: fixed!important;}
 .weui-tabbar__icon{width: 1.2rem; height: 1.2rem}
 
+
+.video_box{width: 100%; height: 250px; background-color: white; position: fixed; z-index: 999; top: 10rem; padding: 25px 2% 25px 2%; display: none;}
+
+.pdf_body{width: 100%; height: 100%;  position: fixed; top: 0; z-index: 9999; display: none}
+.pdf_iframe{border:none; width: 100%; height: 100%}
+
 /** Home page **/
 .header{ height:  2.5rem; }
 
